--- a/workscreen.html
+++ b/workscreen.html
@@ -63,7 +63,7 @@
 
     .grid-3 {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
       gap: 1.75rem;
       margin-bottom: 3rem;
     }
@@ -72,8 +72,12 @@
       background: var(--surface);
       border: 1px solid var(--border);
       border-radius: 14px;
-      padding: 1.75rem 2rem;
+      padding: 2rem;
       transition: all 0.2s ease;
+      aspect-ratio: 1 / 1.15;           /* more square than before */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .card:hover {
@@ -86,11 +90,11 @@
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.25rem;
     }
 
     .card-title {
-      font-size: 1.4rem;
+      font-size: 1.45rem;
       font-weight: 700;
     }
 
@@ -101,52 +105,56 @@
     }
 
     .mega-number {
-      font-size: 4.2rem;
+      font-size: 4.8rem;
       font-weight: 800;
-      line-height: 0.95;
-      letter-spacing: -2px;
+      line-height: 0.9;
+      letter-spacing: -3px;
       color: var(--primary);
+      text-align: center;
+      margin: 0.5rem 0;
     }
 
     .mega-label {
-      font-size: 1.1rem;
+      font-size: 1.15rem;
       color: var(--text-dim);
-      margin-top: 0.4rem;
+      text-align: center;
       font-weight: 500;
     }
 
     .stats-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
-      gap: 1.25rem;
-      margin: 1.75rem 0;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 0.9rem;
+      margin: 1.5rem 0;
     }
 
     .stat-box {
       background: var(--surface-2);
       border-radius: 10px;
-      padding: 1.1rem 0.9rem;
+      padding: 0.9rem 0.6rem;
       text-align: center;
     }
 
     .stat-label {
-      font-size: 0.875rem;
+      font-size: 0.82rem;
       color: var(--text-dim);
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.35rem;
+      line-height: 1.1;
     }
 
     .stat-value {
-      font-size: 2.1rem;
+      font-size: 1.95rem;
       font-weight: 700;
+      line-height: 1;
     }
 
-    .stat-value.complete  { color: var(--success); }
-    .stat-value.inprogress { color: var(--info); }
-    .stat-value.aborted    { color: var(--warning); }
-    .stat-value.cancelled  { color: var(--danger); }
+    .stat-value.complete    { color: var(--success); }
+    .stat-value.inprogress  { color: var(--info); }
+    .stat-value.aborted     { color: var(--warning); }
+    .stat-value.cancelled   { color: var(--danger); }
 
     .jobtype-breakdown {
-      margin-top: 1.5rem;
+      margin-top: 1.25rem;
       padding-top: 1.25rem;
       border-top: 1px solid var(--border);
     }
@@ -161,13 +169,13 @@
     .jobtype-list {
       display: flex;
       flex-direction: column;
-      gap: 0.6rem;
+      gap: 0.55rem;
+      font-size: 0.97rem;
     }
 
     .jobtype-item {
       display: flex;
       justify-content: space-between;
-      font-size: 1rem;
     }
 
     .jobtype-name  { color: var(--text); }
@@ -241,7 +249,13 @@
 
     @media (max-width: 960px) {
       .grid-3 { grid-template-columns: 1fr; }
-      .mega-number { font-size: 3.6rem; }
+      .mega-number { font-size: 4rem; }
+      .stats-grid { grid-template-columns: repeat(3, 1fr); gap: 0.8rem; }
+    }
+
+    @media (max-width: 600px) {
+      .stats-grid { grid-template-columns: repeat(2, 1fr); }
+      .card { padding: 1.5rem; aspect-ratio: 1 / 1.3; }
     }
   </style>
 </head>
@@ -315,7 +329,8 @@
 
     const totalJobs     = weekEntries.length;
     const completed     = weekEntries.filter(e => e.Status === 'complete').length;
-    const inprogress    = weekEntries.filter(e => !['complete','aborted','cancelled'].includes(e.Status)).length;
+    // inprogress only if explicitly "inprogress" – otherwise 0
+    const inprogress    = weekEntries.filter(e => e.Status === 'inprogress').length;
     const aborted       = weekEntries.filter(e => e.Status === 'aborted').length;
     const cancelled     = weekEntries.filter(e => e.Status === 'cancelled').length;
 
@@ -339,11 +354,12 @@
       const dayJobs = weekEntries.filter(e => e.Date === date);
       const total     = dayJobs.length;
       const comp      = dayJobs.filter(e => e.Status === 'complete').length;
-      const prog      = dayJobs.filter(e => !['complete','aborted','cancelled'].includes(e.Status)).length;
+      const prog      = dayJobs.filter(e => e.Status === 'inprogress').length;
       const abo       = dayJobs.filter(e => e.Status === 'aborted').length;
       const can       = dayJobs.filter(e => e.Status === 'cancelled').length;
+      const pending   = total - comp - prog - abo - can;
 
-      return { date, total, completed: comp, inprogress: prog, aborted: abo, cancelled: can };
+      return { date, total, completed: comp, inprogress: prog, aborted: abo, cancelled: can, pending };
     });
 
     return { uniqueJobs, totalJobs, completed, inprogress, aborted, cancelled, byType: typeCounts, daily };
@@ -373,8 +389,10 @@
             <div class="period-label">${formatWeek(p.offset)}</div>
           </div>
 
-          <div class="mega-number">${s.uniqueJobs}</div>
-          <div class="mega-label">unique jobs</div>
+          <div>
+            <div class="mega-number">${s.uniqueJobs}</div>
+            <div class="mega-label">unique jobs</div>
+          </div>
 
           <div class="stats-grid">
             <div class="stat-box">
