--- a/workscreen.html
+++ b/workscreen.html
@@ -6,118 +6,92 @@
   <title>Solar Workscreen – Overview</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --bg:        #0a0e17;
-      --surface:   rgba(22, 27, 34, 0.65);
-      --surface-glow: rgba(22, 27, 34, 0.85);
-      --text:      #f1f5f9;
-      --text-dim:  #cbd5e1;
-      --primary:   #fb923c;
-      --success:   #34d399;
+      --bg:        #0f1117;
+      --surface:   #161b22;
+      --surface-2: #1f2937;
+      --text:      #e2e8f0;
+      --text-dim:  #94a3b8;
+      --primary:   #f97316;
+      --success:   #10b981;
       --warning:   #fbbf24;
       --danger:    #f87171;
       --info:      #60a5fa;
-      --glass-border: rgba(255,255,255,0.08);
-      --shadow:    0 8px 32px rgba(0,0,0,0.45);
+      --border:    #334155;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; }
 
     body {
       font-family: 'Inter', system-ui, sans-serif;
-      background: linear-gradient(135deg, #0a0e17 0%, #0f172a 100%);
+      background: var(--bg);
       color: var(--text);
       min-height: 100vh;
-      background-attachment: fixed;
+      line-height: 1.6;
     }
 
     .container {
       max-width: 1280px;
       margin: 0 auto;
-      padding: 3rem 1.5rem;
+      padding: 2.5rem 1.5rem;
     }
 
     header {
       text-align: center;
-      margin-bottom: 4rem;
+      margin-bottom: 3rem;
     }
 
     h1 {
-      font-size: 3.2rem;
+      font-size: 2.8rem;
       font-weight: 800;
-      letter-spacing: -1px;
-      background: linear-gradient(90deg, #fb923c, #f472b6, #60a5fa);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
+      letter-spacing: -0.8px;
+      color: var(--primary);
     }
 
     .subtitle {
       color: var(--text-dim);
-      font-size: 1.2rem;
-      font-weight: 400;
-      margin-top: 0.75rem;
+      font-size: 1.15rem;
+      margin-top: 0.5rem;
     }
 
     .weekly-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
       gap: 2rem;
-      margin-bottom: 4rem;
+      margin-bottom: 3.5rem;
     }
 
     .week-card {
       background: var(--surface);
-      backdrop-filter: blur(16px) saturate(180%);
-      -webkit-backdrop-filter: blur(16px) saturate(180%);
-      border: 1px solid var(--glass-border);
-      border-radius: 20px;
+      border: 1px solid var(--border);
+      border-radius: 16px;
       padding: 2rem;
-      box-shadow: var(--shadow);
-      transition: all 0.35s ease;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+      transition: all 0.25s ease;
       aspect-ratio: 1 / 1;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .week-card::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(135deg, rgba(251,146,60,0.08) 0%, transparent 60%);
-      opacity: 0;
-      transition: opacity 0.4s ease;
-      pointer-events: none;
     }
 
     .week-card:hover {
-      transform: translateY(-8px) scale(1.02);
-      box-shadow: 0 24px 48px rgba(0,0,0,0.55);
-    }
-
-    .week-card:hover::before {
-      opacity: 1;
+      transform: translateY(-6px);
+      box-shadow: 0 16px 40px rgba(0,0,0,0.45);
+      border-color: var(--primary);
     }
 
     .card-header {
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.25rem;
     }
 
     .card-title {
-      font-size: 1.5rem;
+      font-size: 1.45rem;
       font-weight: 700;
     }
 
@@ -129,19 +103,19 @@
 
     .mega {
       text-align: center;
-      margin: 1.5rem 0;
+      margin: 1rem 0 1.5rem;
     }
 
     .mega-number {
-      font-size: 5.5rem;
+      font-size: 5.2rem;
       font-weight: 800;
-      line-height: 0.85;
-      letter-spacing: -4px;
+      line-height: 0.9;
+      letter-spacing: -3px;
       color: var(--primary);
     }
 
     .mega-label {
-      font-size: 1.25rem;
+      font-size: 1.2rem;
       color: var(--text-dim);
       font-weight: 500;
     }
@@ -150,25 +124,24 @@
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       gap: 0.9rem;
-      margin: 1.25rem 0;
+      margin: 1rem 0;
     }
 
     .stat {
-      background: rgba(30,41,59,0.5);
-      border-radius: 12px;
+      background: var(--surface-2);
+      border-radius: 10px;
       padding: 1rem 0.8rem;
       text-align: center;
-      backdrop-filter: blur(8px);
     }
 
     .stat-label {
-      font-size: 0.82rem;
+      font-size: 0.85rem;
       color: var(--text-dim);
       margin-bottom: 0.4rem;
     }
 
     .stat-value {
-      font-size: 2rem;
+      font-size: 2.05rem;
       font-weight: 700;
       line-height: 1;
     }
@@ -179,29 +152,28 @@
     .stat-value.cancelled   { color: var(--danger); }
 
     .jobtype-section {
-      margin-top: 1.25rem;
+      margin-top: 1rem;
       padding-top: 1.25rem;
-      border-top: 1px solid rgba(255,255,255,0.08);
+      border-top: 1px solid var(--border);
     }
 
     .jobtype-title {
-      font-size: 1.1rem;
+      font-size: 1.05rem;
       font-weight: 600;
       color: var(--text-dim);
-      margin-bottom: 0.9rem;
+      margin-bottom: 0.85rem;
     }
 
     .jobtype-list {
       display: flex;
       flex-direction: column;
-      gap: 0.6rem;
-      font-size: 1rem;
+      gap: 0.55rem;
+      font-size: 0.98rem;
     }
 
     .jobtype-item {
       display: flex;
       justify-content: space-between;
-      font-weight: 500;
     }
 
     .jobtype-name  { color: var(--text); }
@@ -215,15 +187,14 @@
 
     .daily-card {
       background: var(--surface);
-      backdrop-filter: blur(12px);
-      border: 1px solid var(--glass-border);
-      border-radius: 16px;
+      border: 1px solid var(--border);
+      border-radius: 14px;
       padding: 1.75rem;
-      box-shadow: var(--shadow);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.25);
     }
 
     .daily-header {
-      font-size: 1.35rem;
+      font-size: 1.3rem;
       font-weight: 700;
       margin-bottom: 1.25rem;
       display: flex;
@@ -232,13 +203,13 @@
     }
 
     .daily-total {
-      font-size: 1.5rem;
+      font-size: 1.45rem;
       color: var(--primary);
     }
 
     .progress-container {
-      height: 1.8rem;
-      background: rgba(30,41,59,0.6);
+      height: 1.75rem;
+      background: var(--surface-2);
       border-radius: 10px;
       overflow: hidden;
       display: flex;
@@ -247,7 +218,7 @@
 
     .progress-bar {
       height: 100%;
-      transition: width 0.6s ease;
+      transition: width 0.5s ease;
     }
 
     .bar.complete    { background: var(--success); }
@@ -258,7 +229,7 @@
     .daily-legend {
       display: flex;
       flex-wrap: wrap;
-      gap: 1.25rem 2rem;
+      gap: 1.25rem 1.75rem;
       font-size: 0.92rem;
       color: var(--text-dim);
     }
@@ -282,7 +253,7 @@
 
     @media (max-width: 640px) {
       .stats-row { grid-template-columns: repeat(3, 1fr); gap: 0.8rem; }
-      .week-card { padding: 1.5rem; aspect-ratio: 1 / 1.2; }
+      .week-card { padding: 1.5rem; aspect-ratio: 1 / 1.15; }
     }
   </style>
 </head>
@@ -355,7 +326,7 @@
 
     const totalJobs     = weekEntries.length;
     const completed     = weekEntries.filter(e => e.Status === 'complete').length;
-    const inprogress    = weekEntries.filter(e => e.Status === 'inprogress').length;
+    const inprogress    = weekEntries.filter(e => e.Status === 'in-progress').length;
     const aborted       = weekEntries.filter(e => e.Status === 'aborted').length;
     const cancelled     = weekEntries.filter(e => e.Status === 'cancelled').length;
 
@@ -377,7 +348,7 @@
       const dayJobs = weekEntries.filter(e => e.Date === date);
       const total     = dayJobs.length;
       const comp      = dayJobs.filter(e => e.Status === 'complete').length;
-      const prog      = dayJobs.filter(e => e.Status === 'inprogress').length;
+      const prog      = dayJobs.filter(e => e.Status === 'in-progress').length;
       const abo       = dayJobs.filter(e => e.Status === 'aborted').length;
       const can       = dayJobs.filter(e => e.Status === 'cancelled').length;
       const pending   = total - comp - prog - abo - can;
